--- a/ApiTester/ApiTester-Info.plist
+++ b/ApiTester/ApiTester-Info.plist
@@ -34,5 +34,14 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb156029251129430</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
